# opencv-simple

./: .gitignore  CMakeLists.txt  README.md  action.yml  琐记.md
src/: main.cpp
